# open-piano

./: .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MODEL.md  README.md  THIRD-PARTY-NOTICES.md  build.rs  download_model.py  verify_alignment.py
.cargo/: config.toml
.github/workflows/: release-signed.yml.disabled  release.yml
src/: audio.rs  bundle.rs  inference.rs  input.rs  main.rs  midi.rs  net.rs  note.rs  playback.rs  prefs.rs  record.rs  roll.rs  score.rs  synth.rs  update.rs
