[package]
name = "open-piano"
version = "0.3.1"
edition = "2021"
description = "Real-time, networked, peer-to-peer acoustic piano visualizer"
license = "MIT OR Apache-2.0"

[dependencies]
# GUI
eframe = "0.29"
egui = "0.29"

# Audio capture (WASAPI host on Windows) — used only as the fallback input.
cpal = "0.15"
# USB / class-compliant MIDI input (WinMM on Windows). Preferred input source:
# a connected digital piano gives exact note events with no transcription.
midir = "0.10"
# ONNX Runtime. `load-dynamic` links the ONNX Runtime shared library at runtime
# (onnxruntime.dll) instead of downloading/static-linking it at build time, so
# the project always compiles cleanly even on networks that block the binary
# CDN. See MODEL.md for obtaining onnxruntime.dll + model.onnx.
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "load-dynamic", "api-24"] }
# WAV writing for the training-data capture harness (see record.rs). Pure-Rust,
# no system deps; writes float32 mono WAV at the mic's native sample rate.
hound = "3"
# In-app auto-update against GitHub Releases (see update.rs). Checks the Releases
# API on launch and, if a newer `vX.Y.Z` exists, downloads the matching portable
# zip and self-replaces the running exe. We keep self_update's default features:
# that gives reqwest with native TLS (schannel — Windows' built-in TLS, so no
# OpenSSL and no extra C/assembly crypto crate to build). We only add the two zip
# features needed to unpack the Compress-Archive (deflate) output of the workflow.
self_update = { version = "0.44", features = ["archive-zip", "compression-zip-deflate"] }
# P2P transport (see net.rs). iroh gives us NAT traversal for free: peers are
# dialed by public key, hole punching is attempted automatically, and n0's
# public relay servers carry the traffic when punching fails (VPN/CGNAT peers),
# so nobody ever forwards a port. The QUIC connection's *unreliable datagrams*
# preserve the old UDP fire-and-forget semantics for note packets.
iroh = "1"
# One-string session invites: an `EndpointTicket` serializes the host's id +
# relay + direct addresses into a copy-pasteable code (Display/FromStr).
iroh-tickets = "1"
# Async runtime for iroh, confined to the dedicated net thread (current-thread
# runtime; see net.rs). The GUI and the realtime threads stay sync.
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
# `Connection::send_datagram` takes `bytes::Bytes` payloads.
bytes = "1"
# Standard MIDI File writing for the piano-roll save feature (see roll.rs).
# Pure-Rust; the default `std` feature provides `Smf::save`.
midly = "0.5"
# Native "Save As…" dialog for exporting the piano roll. Blocking call on the
# GUI thread — standard practice with eframe on Windows.
rfd = "0.15"
# JSON for the roll's color sidecar + JSONL export (see roll.rs). record.rs
# deliberately hand-writes its JSON; here these files will also be *read back*
# in a later phase, so robust (de)serialization is worth it — and serde is
# already in the dependency graph transitively via iroh, so ~no build cost.
serde_json = "1"

# Embeds assets/icon.ico as the .exe's file icon (see build.rs). Windows-only:
# the icon resource is a PE-format concept.
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.dev]
# Optimize the audio / pitch-detection math loops even in dev builds.
opt-level = 1
